      overflow when reporting errors caused by too large input strings
      (\PR{18346}).

      \item Toplevel handlers are now more robust to attempts to remove a
      handler while handlers are running (\PR{18508}).

      \item Handling of \code{Alt+F4} in dialogs created on Windows using
      GraphApp has been fixed (\PR{13870}).
    }
  }
}

\section{\Rlogo CHANGES IN R 4.3.0 patched}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item C API \file{Applic.h} version of \R's \code{integrate()},
      \code{Rdqags()} now returns the correct number of integrand
      evaluations \code{neval}, fixing \PR{18515} reported and diagnosed by
      Stephen Wade.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Many of the checks of esoteric Internet operations and those
      using unreliable external sites have been moved to a new target
      that is not run by default and primarily intended for the core
      developers.  To run them use
\preformatted{
	cd tests; make test-Internet-dev
}
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item .
    }
  }
}

\section{\Rlogo CHANGES IN R 4.3.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item Calling \code{&&} or \code{||} with LHS or (if evaluated) RHS of
      length greater than one is now always an error, with a report of
      the form
\preformatted{    'length = 4' in coercion to 'logical(1)'}

      Environment variable \env{_R_CHECK_LENGTH_1_LOGIC2_} no longer has
      any effect.
    }
  }

  \subsection{NEW FEATURES}{
    \itemize{
      \item The included BLAS sources have been updated to those shipped
      with LAPACK version 3.10.1.  (This caused some platform-dependent
      changes to package check output.)  And then to the sources from
      LAPACK version 3.11.0 (with changes only to double complex
      subroutines).

      \item The included LAPACK sources have been updated to include the